feat: show blog posts

--- a/src/content/posts/5-things-learned-first-job.mdx
+++ b/src/content/posts/5-things-learned-first-job.mdx
@@ -1,5 +1,5 @@
 ---
-title: "5 lessons learned from my first SWE job."
+title: "5 lessons learned from my first SWE job"
 publishedAt: 1681079647825
 description: "Lessons I will take to my next one and you should take to your first one."
 tags: ["career", "advice", "coding"]
