--- a/src/content/posts/winning-first-hackathon.mdx
+++ b/src/content/posts/winning-first-hackathon.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How I won my first ever hackathon."
+title: "How I won my first ever hackathon"
 publishedAt: 1681230886261
 description: "48 hours of red bull, pizza, and straight grind."
 tags: ["hackathon", "startup"]
