--- a/src/content/posts/documenting-library-with-chatgpt.mdx
+++ b/src/content/posts/documenting-library-with-chatgpt.mdx
@@ -145,13 +145,13 @@ One common case I noticed that ChatGPT would struggle with was when I had existi
 
 As a result of this journey, I learned three things:
 
-1. ## Don’t brush off new technology, give it a chance.
+1. ### Don’t brush off new technology, give it a chance.
     - Because of my reluctance to use ChatGPT, I almost invested 20+ hours of work for something that would have been subpar compared to what the AI could have given me.
-2. ## Be clear and exact with your requests to the AI.
+2. ### Be clear and exact with your requests to the AI.
     - The AI isn’t perfect and does not know what you want on the first try in some cases. It’s easy to get discouraged and think that the response it gave you was subpar, but if you just narrow down exactly what you want, chances are it’ll give you just that.
     - You should also take a second to recognize any potential flaws in your requests. Don’t ask the AI for JSDoc comments when what you actually want are TSDoc comments.
     - Don’t let the AI get away with incorrectly fulfilling your requests. Educate it on why its previous response wasn’t satisfactory and what it can to do fix it. It will keep that in mind for your next conversation too.
-3. ## Explore new possibilities.
+3. ### Explore new possibilities.
     - Think outside the box of what you’re trying to do and you might be surprised. In some follow-up responses, I asked ChatGPT to generate example snippets of the methods I had it document, and it was actually able to generate working code that followed the rules of my library.
 
 Overall, I had a pretty positive experience and I encourage all library maintainers to give it a try. Free up the work on your plate so you can work on the things that excite you, like the code.
