feat: add blog post hiding

--- a/src/content/posts/surah-al-fatiha.mdx
+++ b/src/content/posts/surah-al-fatiha.mdx
@@ -3,6 +3,7 @@ title: "Surah Al-Fatiha"
 publishedAt: 1679603852230
 description: "The Opener"
 tags: ["islam", "qu'ran"]
+visible: false
 ---
 
 _بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ_
