--- a/src/content/posts/goodbye-guilded.mdx
+++ b/src/content/posts/goodbye-guilded.mdx
@@ -14,7 +14,7 @@ Seeing Guilded as a fresh opportunity, I joined despite its lack of an official 
 It was a fun learning experience, and I managed to make it usable for other developers. Despite being in a gray area, a solid amount of people used my library for their projects. It was the reinforcement I needed to keep going.
   
 Things started slowing down after a year or so, as I had covered most of the meaningful routes in the client API. It wasn't until I received a DM from a staff member at Guilded, in July of 2021, about being invited to their early access for their official bot API. 
-I was over the moon. The second I joined the early access, I started working on churning out the next verison of guilded.js. 
+I was over the moon. The second I joined the early access, I started working on churning out the next version of guilded.js. 
 And at that point, I was in communication with the owner of the `guilded.js` package on NPM and I was able to receive ownership of the package.
 
 Soon, the library was in a state where I could create basic bots with it. It was then that I created the first moderation bot on Guilded, titled [**Yoki**](https://yoki.gg).
@@ -23,7 +23,7 @@ Soon, the library was in a state where I could create basic bots with it. It was
 
 Yoki originally started as a Discord moderation bot but never grew beyond a handful of servers.
 I decided that I would bring Yoki to Guilded as a way to test out the new API and see if this was a market that I could capture. 
-I spent months building Yoki in the shadows, and in that time I was able to bring onboard my wonderful partners IDKGoodName and ItzNxthaniel.
+I spent months building Yoki in the shadows, and in that time I was able to bring on board my wonderful partners IDKGoodName and ItzNxthaniel.
   
 [We released Yoki in July of 2022](https://www.guilded.gg/Yoki/groups/2dXLMBPd/channels/e717da50-27cc-4734-927c-f66130bc915d/announcements/jyPLeABy). It was a hit. We had over 100 servers using the bot within the first month and the growth never seemed to stop. We were ecstatic. 
 We had a bot that was being used by people all over the platform. We were able to bring features that Discord bots had to Guilded, and we were able to do it in a way that was unique to Guilded.
@@ -54,7 +54,7 @@ We were blindsided.
   
 This completely went against the previous assurance that Guilded would continue to operate as an independent product group. 
 This was a direct integration that spoke volumes, saying "only Roblox users are welcome here". This was the final straw for us. 
-The continuing problem regarding slow API features and bug fixes were one thing (which was never solved either), but this was a complete disregard for the community that had been built up over the years.
+The continuing problem regarding slow API features and bug fixes was one thing, but this was a complete disregard for the community that had been built up over the years.
 Guilded had lots of die-hard fans, one member [even tattooed the mascot on their body](https://twitter.com/Xyphien/status/1796616296173285686). Other users gave up their Discord servers to move to Guilded, they made an investment in Guilded that it would be a safe space for their members.
 We all gave years of our lives to this platform, promoting it free of charge, and it was all thrown away in an instant.
   
@@ -66,7 +66,7 @@ But, if Roblox is willing to make decisions like these that completely shatter t
 
 We made the difficult decision on July 1st, 2024 that [we were shutting Yoki down](https://www.guilded.gg/Yoki/groups/2dXLMBPd/channels/e717da50-27cc-4734-927c-f66130bc915d/announcements/7lxArak6). 
 After 2 years of hard work, we had to say goodbye to our project.
-This followed in solidary with a lot of the other moderation bots on the platform, like [Parrot](https://parrotbot.gg/), [Server Guard](https://www.guilded.gg/server-guard), and [EcoNuker](https://www.guilded.gg/econuker). Many other bots followed suit.
+This followed in solidarity with a lot of the other moderation bots on the platform, like [Parrot](https://parrotbot.gg/), [Server Guard](https://www.guilded.gg/server-guard), and [EcoNuker](https://www.guilded.gg/econuker). Many other bots followed suit.
 These were some of the most popular bots on the platform, serving a large number of communities. We estimate around 10,000+ servers are now going to be without a moderation bot.
 This was a heartbreaking decision to make. I had spent two years of my life making this bot, and it was coming to an end.
   
@@ -76,13 +76,13 @@ We had to say goodbye to the project that we had poured our hearts into.
 
 Something I've learned from this experience is that you can't always predict the future. You have to cherish the things you have, the experiences you have, the people you meet. Because you don't know when it will all come to an end.
 Another thing is that you have to stand up for what you believe in. If you see something that is wrong, you have to speak out against it. You have to make your voice heard. Even if it means making difficult decisions.
-Always remember that companies can change in an instant. In the end, they have to make the decision that they feel is best for them in the long run. In that same vein, you have to make the decision that is best for you.
+Always remember that companies can change in an instant. In the end, they have to make the decision that they feel is best for them in the long run. In that same vein, you have to make the decisions that are best for you.
 
 # Acknowledgments
 
 I want to extend a couple thank you's to some individuals that made this journey possible.
   
-- IDKGoodName and ItzNxthaniel - For being an amazing partners and helping me build Yoki from the ground up. Thank you for being amazing people to work with.
+- IDKGoodName and ItzNxthaniel - For being amazing partners and helping me build Yoki from the ground up. Thank you for being amazing people to work with.
 - Shay - For helping document the client API, which was what originally started my journey with Guilded. Thank you for being a great friend.
 - Dylan - For being so talented with web dev, and helping me build the site for Yoki and letting me bounce off ideas. Thank you for being a great friend.
 - Seung - For being the Guilded staff member that helped me get into the early access for the bot API. For always being there to answer my questions and troubleshoot. Thank you for your kindness.
